--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,10 +1,17 @@
 html, body {
-  margin: 0;
-  padding: 0;
   font-family: 'Arima Madurai', sans-serif; }
 
-#feed-app-container {
-  width: 100%; }
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 100%;
+  width: 100%;
+  float: left; }
+
+#feed-app-container, .feed-app-root {
+  float: left;
+  width: 100%;
+  height: 100%; }
 
 .main-viewport {
   width: 61.8%; }
@@ -12,7 +19,26 @@ html, body {
 .aside-viewport {
   width: 38.2%;
   font-family: 'Inconsolata', sans-serif;
-  float: right; }
+  right: 0;
+  height: 100%;
+  position: absolute; }
+
+.aside-bar-content {
+  float: left;
+  padding-left: 2%;
+  padding-top: 2%;
+  height: 98%;
+  background: rgba(246, 246, 246, 0.32); }
+
+.margin-tab {
+  height: 100%;
+  width: 24px;
+  background: #f6f6f6;
+  float: left;
+  -webkit-box-shadow: -5px 0px 21px -6px rgba(145, 145, 145, 0.49);
+  -moz-box-shadow: -5px 0px 21px -6px rgba(145, 145, 145, 0.49);
+  box-shadow: -5px 0px 21px -6px rgba(181, 181, 181, 0.49);
+  margin-left: -24px; }
 
 .help-text-wrapper {
   float: left;
@@ -49,7 +75,7 @@ html, body {
 
 .add-new-site-form {
   float: left;
-  width: 100%;
+  width: calc(100% - calc(14px + 1%));
   padding-top: 2%;
   padding-left: calc(14px + 1%); }
 
@@ -57,14 +83,14 @@ html, body {
   font-size: 1.2em;
   color: #3f85c5;
   float: left;
-  width: 83%; }
+  width: 85%; }
 
 .add-new-site-form input[type="text"] {
   float: left;
   padding: 2%;
   margin-top: 1%;
   margin-bottom: 1%;
-  width: 88%;
+  width: 91%;
   border: 0;
   border-bottom: 1px solid #8db7dd;
   outline: none;
@@ -73,17 +99,17 @@ html, body {
 
 .add-new-site-form input[type="text"]:focus {
   background: rgba(63, 133, 197, 0.075);
-  width: 84.5%;
+  width: 87%;
   padding-left: 5%; }
 
 .add-new-site-form input[type="text"]:active {
   background: rgba(63, 133, 197, 0.075);
-  width: 84.5%;
+  width: 87%;
   padding-left: 5%; }
 
 .add-new-site-form input[type="text"]:hover {
   background: rgba(63, 133, 197, 0.075);
-  width: 84.5%;
+  width: 87%;
   padding-left: 5%; }
 
 .add-new-site-row {
@@ -120,8 +146,27 @@ html, body {
   border: 0;
   color: #3f85c5;
   font-size: 24px;
-  width: 17%;
+  width: 15%;
   opacity: 1;
   transition: opacity 0.4s; }
+
+@media (max-width: 1400px) {
+  .add-new-site-form-header {
+    width: 79%; } }
+@media (max-width: 1100px) {
+  .add-new-site-form-header {
+    width: 75%; }
+
+  .site-item {
+    margin-top: 2%;
+    margin-bottom: 2%; }
+
+  .site-item-delete {
+    float: right; }
+
+  .site-item-name, .site-item-url {
+    text-align: right;
+    width: 100%;
+    float: left; } }
 
 /*# sourceMappingURL=style.css.map */
