--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -4,14 +4,23 @@ $active-colour: #3f85c5;
 
 html, body
 {
-	margin: 0;
-	padding: 0;
 	font-family: 'Arima Madurai', sans-serif;
 }
 
-#feed-app-container
+body
 {
-	width: $main-viewport-width + $aside-viewport-width;
+	margin: 0 !important;
+	padding: 0 !important;
+	height: 100%;
+	width: 100%;
+	float:left;
+}
+
+#feed-app-container, .feed-app-root
+{
+	float: left;
+	width: 100%;
+    height: 100%;
 }
 
 .main-viewport
@@ -22,9 +31,33 @@ html, body
 .aside-viewport
 {
 	width: $aside-viewport-width;
-	font-family: 'Inconsolata', sans-serif;
-	float: right;
+    font-family: 'Inconsolata', sans-serif;
+    right: 0;
+    height: 100%;
+    position: absolute;
 }
+
+.aside-bar-content
+{
+    float: left;
+    padding-left: 2%;
+    padding-top: 2%;
+    height: 98%;
+    background: rgba(246, 246, 246, 0.32);
+}
+
+.margin-tab
+{
+    height: 100%;
+    width: 24px;
+    background: #f6f6f6;
+    float: left;
+    -webkit-box-shadow: -5px 0px 21px -6px rgba(145,145,145,0.49);
+    -moz-box-shadow: -5px 0px 21px -6px rgba(145,145,145,0.49);
+    box-shadow: -5px 0px 21px -6px rgba(181, 181, 181, 0.49);
+    margin-left: -24px;
+}
+
 
 .help-text-wrapper
 {
@@ -77,10 +110,10 @@ html, body
 
 .add-new-site-form
 {
-	float:left;
-	width: 100%;
-	padding-top: 2%;
-	padding-left:calc(14px + 1%);
+    float: left;
+    width: calc(100% - calc(14px + 1%));
+    padding-top: 2%;
+    padding-left: calc(14px + 1%);
 }
 
 .add-new-site-form-header
@@ -88,7 +121,7 @@ html, body
 	font-size: 1.2em;
 	color: $active-colour;
 	float: left;
-	width:83%;
+	width:85%;
 }
 
 .add-new-site-form input[type="text"]
@@ -97,7 +130,7 @@ html, body
 	padding: 2%;
 	margin-top: 1%;
 	margin-bottom: 1%;
-	width: 88%;
+	width: 91%;
 	border: 0;
 	border-bottom: 1px solid lighten($active-colour, 20%);
 	outline: none;
@@ -108,21 +141,21 @@ html, body
 .add-new-site-form input[type="text"]:focus
 {
 	background: rgba(63,133,197, 0.075);
-	width: 84.5%;
+	width: 87%;
 	padding-left: 5%;
 }
 
 .add-new-site-form input[type="text"]:active
 {
 	background: rgba(63,133,197, 0.075);
-	width: 84.5%;
+	width: 87%;
 	padding-left: 5%;
 }
 
 .add-new-site-form input[type="text"]:hover
 {
 	background: rgba(63,133,197, 0.075);
-	width: 84.5%;
+	width: 87%;
 	padding-left: 5%;
 }
 
@@ -162,7 +195,42 @@ html, body
     border: 0;
     color: $active-colour;
     font-size: 24px;
-    width: 17%;
+    width: 15%;
     opacity: 1;
 	transition: opacity 0.4s;
+}
+
+
+@media ( max-width: 1400px )
+{
+	.add-new-site-form-header
+	{
+		width: 79%;
+	}
+}
+
+@media ( max-width: 1100px )
+{
+	.add-new-site-form-header
+	{
+		width: 75%;
+	}
+
+	.site-item
+	{
+		margin-top: 2%;
+		margin-bottom: 2%;
+	}
+
+	.site-item-delete
+	{
+		float: right;
+	}
+
+	.site-item-name, .site-item-url
+	{
+		text-align: right;
+		width: 100%;
+		float: left;
+	}
 }
