--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -13,7 +13,6 @@ body
 	padding: 0 !important;
 	height: 100%;
 	width: 100%;
-	float:left;
 }
 
 #feed-app-container, .feed-app-root
@@ -37,12 +36,33 @@ body
     position: absolute;
 }
 
+.notifications-container
+{
+	transition: 0.7s all;
+	display: block;
+	opacity: 1;
+	position: fixed;
+	right: -30%;
+	top: 25%;
+	margin-bottom: 0%;
+	padding: 1%;
+	background: rgba(0, 0, 0, 0.9);
+	color: white;
+	border-radius: 8px;
+	z-index: 50;
+}
+
+.active-notification
+{
+	transition: 0.7s all;
+	margin-right: 35%;
+}
+
 .aside-bar-content
 {
-    float: left;
     padding-left: 2%;
     padding-top: 2%;
-    height: 98%;
+    height: 80%;
     background: rgba(246, 246, 246, 0.32);
 }
 
