refactor to break down into more components

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -13,7 +13,8 @@ body {
   height: 100%; }
 
 .main-viewport {
-  width: 61.8%; }
+  width: 61.8%;
+  padding: 7%; }
 
 .aside-viewport {
   width: 38.2%;
