--- a/client/css/style.css
+++ b/client/css/style.css
@@ -5,7 +5,8 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
 
 #feed-app-container, .feed-app-root {
   float: left;
@@ -13,15 +14,20 @@ body {
   height: 100%; }
 
 .main-viewport {
-  width: 61.8%;
-  padding: 7%; }
+  width: 93%;
+  padding: 7% 0% 7% 7%;
+  float: left; }
 
 .aside-viewport {
   width: 38.2%;
   font-family: 'Inconsolata', sans-serif;
   right: 0;
   height: 100%;
-  position: absolute; }
+  position: absolute;
+  transition: 1s all; }
+
+.closed-panel {
+  width: 0% !important; }
 
 .notifications-container {
   transition: 0.7s all;
@@ -42,20 +48,26 @@ body {
   margin-right: 35%; }
 
 .aside-bar-content {
-  padding-left: 2%;
-  padding-top: 2%;
-  height: 80%;
-  background: rgba(246, 246, 246, 0.32); }
+  padding-left: 7%;
+  padding-top: 7%;
+  padding-right: 7%;
+  height: 80%; }
 
 .margin-tab {
   height: 100%;
   width: 24px;
-  background: #f6f6f6;
+  background: rgba(63, 133, 197, 0.13);
   float: left;
   -webkit-box-shadow: -5px 0px 21px -6px rgba(145, 145, 145, 0.49);
   -moz-box-shadow: -5px 0px 21px -6px rgba(145, 145, 145, 0.49);
   box-shadow: -5px 0px 21px -6px rgba(181, 181, 181, 0.49);
   margin-left: -24px; }
+
+.margin-tab i {
+  margin-top: 50px;
+  margin-left: 4px;
+  color: #8fadc8;
+  font-size: 20px; }
 
 .help-text-wrapper {
   float: left;
@@ -93,7 +105,7 @@ body {
 .add-new-site-form {
   float: left;
   width: calc(100% - calc(14px + 1%));
-  padding-top: 2%;
+  padding-top: 14%;
   padding-left: calc(14px + 1%); }
 
 .add-new-site-form-header {
