--- a/client/css/style.css
+++ b/client/css/style.css
@@ -64,10 +64,11 @@ body {
   margin-left: -24px; }
 
 .margin-tab i {
-  margin-top: 50px;
+  top: 45%;
   margin-left: 4px;
-  color: #8fadc8;
-  font-size: 20px; }
+  color: #c5d6e6;
+  font-size: 20px;
+  position: absolute; }
 
 .help-text-wrapper {
   float: left;
@@ -117,9 +118,10 @@ body {
 .add-new-site-form input[type="text"] {
   float: left;
   padding: 2%;
+  padding-left: 0%;
   margin-top: 1%;
   margin-bottom: 1%;
-  width: 91%;
+  width: 94%;
   border: 0;
   border-bottom: 1px solid #8db7dd;
   outline: none;
@@ -128,17 +130,17 @@ body {
 
 .add-new-site-form input[type="text"]:focus {
   background: rgba(63, 133, 197, 0.075);
-  width: 87%;
+  width: 89%;
   padding-left: 5%; }
 
 .add-new-site-form input[type="text"]:active {
   background: rgba(63, 133, 197, 0.075);
-  width: 87%;
+  width: 89%;
   padding-left: 5%; }
 
 .add-new-site-form input[type="text"]:hover {
   background: rgba(63, 133, 197, 0.075);
-  width: 87%;
+  width: 89%;
   padding-left: 5%; }
 
 .add-new-site-row {
